fix homepage etxt img alignment and fix Gotham font problem

--- a/_sass/main.scss
+++ b/_sass/main.scss
@@ -1,12 +1,12 @@
 @font-face {
   font-family: 'Gotham';
   font-weight: bold;
-  src: url('/fonts/Gotham/Gotham-Bold.eot');
+  src: url('/fonts/Gotham/Gotham-Bold.otf');
 }
 @font-face {
   font-family: 'Gotham';
   font-weight: 500;
-  src: url('/fonts/Gotham/Gotham-Medium.eot');
+  src: url('/fonts/Gotham/Gotham-Medium.otf');
 }
 
 @font-face {
